<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lastbackground"
    tools:context=".lastReward">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:background="@drawable/trophy"
        android:layout_gravity="center"
        android:contentDescription="@string/trophyimage" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eren"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is_0_out_of_9"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:text="@string/finish" />

</LinearLayout>